# opsgenie-auto-close

./: .dockerignore  .gitignore  dockerfile  pyproject.toml
autoclose/: main.py
autoclose/config/: logfile.py  rules.py  settings.py
autoclose/core/: close_alert.py  elastic_connect.py  elastic_monitor.py  fetch_alert.py  fetch_open.py  opsgenie_client.py
autoclose/handlers/: alert_details.py  handlers.py
autoclose/loggers/: config_loader.py  log_cli.py
autoclose/schedulers/: scheduler.py
autoclose/testing/: test1.py
autoclose/webui/: settings.json
