[project]
name = "autoclose"
version = "0.1.0"
description = ""
authors = [
    {name = "Girish Reddy"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests (>=2.32.4,<3.0.0)",
    "platformdirs (>=4.3.8,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
